--- a/src/styles/game.css
+++ b/src/styles/game.css
@@ -1,6 +1,44 @@
-.game__textarea {
+.game__menu {
   position: fixed;
   top: 0;
   right: 0;
   outline: none;
+  width: 25vw;
+  height: 50vh;
+  display: flex;
+  justify-content: space-between;
+}
+.game__chat {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.game__textarea {
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
+}
+.game__button--increase-font {
+}
+.game__home {
+  width: 50px;
+}
+.game__member {
+  color: white;
+  font-size: 1.5em;
+}
+.game__players {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: rgba(255, 255, 255, 0.3);
+  border-radius: 3px;
+  padding: 0px 20px;
+}
+ul {
+  list-style-type: none;
+  margin: 0 !important;
+  padding: 0 !important;
 }
